update audio path

--- a/experiment/stt.ipynb
+++ b/experiment/stt.ipynb
@@ -49,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio_file = here(\"data/01.wav\")\n",
+    "audio_file = here(\"data/sample/01.wav\")\n",
     "waveform, sample_rate = torchaudio.load(audio_file)"
    ]
   },
